// Compile via python -m grpc_tools.protoc -I. --python_out=. --grpc_python_out=. ServerLobby.proto 

syntax = "proto3";

package ServerLobby;

// Status values
enum Status {
  PENDING = 0;
  SUCCESS = 1;
  MATCH = 2;
  ERROR = 3;
}


// Join the lobby 
message JoinLobbyRequest {
    string username = 1;
    string MusicPlayerAddress = 2;
}
message JoinLobbyResponse {
    Status status = 1;
}

// Leave the lobby 
message LeaveLobbyRequest {
    string username = 1;
}
message LeaveLobbyResponse {
}


// Get the currently active rooms
message GetRoomsRequest {}
message GetRoomsResponse{
    repeated string rooms = 1;
    repeated string addresses = 2;
}

// Try to join a room
message JoinRoomRequest {
    string username = 1;
    string roomname = 2;
}
message JoinRoomResponse {
    Status status = 1;
}

// Inform you left a room
message LeaveRoomRequest {
    string username = 1;
    string roomname = 2;
}
message LeaveRoomResponse {
    Status status = 1;
}

// Try to start a room
message StartRoomRequest {
    string name = 1;
}
message StartRoomResponse {
    Status status = 1;
    repeated string rooms = 2;
    repeated string addresses = 3;
}

service ServerLobby {
    rpc JoinLobby(JoinLobbyRequest) returns (JoinLobbyResponse);
    rpc LeaveLobby(LeaveLobbyRequest) returns (LeaveLobbyResponse);
    rpc GetRooms(GetRoomsRequest) returns (GetRoomsResponse);
    rpc JoinRoom(JoinRoomRequest) returns (JoinRoomResponse);
    rpc LeaveRoom(LeaveRoomRequest) returns (LeaveRoomResponse);
    rpc StartRoom(StartRoomRequest) returns (StartRoomResponse);
}